--- a/.github/workflows/dokku.yml
+++ b/.github/workflows/dokku.yml
@@ -20,6 +20,6 @@ jobs:
       uses: idoberko2/dokku-deploy-github-action@v1
       with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          dokku-host: '172.31.45.240'
+          dokku-host: 'ip-172-31-45-240.us-east-2.compute.internal'
           app-name: 'invtb'
           git-push-flags: '--force'
