--- a/.github/workflows/dokku.yml
+++ b/.github/workflows/dokku.yml
@@ -20,6 +20,7 @@ jobs:
       uses: idoberko2/dokku-deploy-github-action@v1
       with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          dokku-user: 'ubuntu'
           dokku-host: '18.225.5.163'
           app-name: 'invtb'
           git-push-flags: '--force'
