--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: "3.8"
 
 services:
   db:
@@ -43,7 +43,7 @@ services:
     depends_on:
       - web
     volumes:
-      - .:/src
+      - .:/code
 #  celery:
 #    build: .
 #    container_name: celery
