edited .env, docker-compose, urls

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DJANGO_DEBUG=True
-DATABASE_URL=postgres://postgres:Ageeva21@localhost:5432/InvestBot_DB
+#DATABASE_URL=postgres://postgres:Ageeva21@localhost:5432/InvestBot_DB
 TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
+DATABASE_URL=postgres://postgres:Ageeva21@docker.for.mac.host.internal:5432/InvestBot_DB
+#TELEGRAM_TOKEN=1735466306:AAHVFNp98u2OplxoWOobhzcUKuBA8F5RwhA
