--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,11 @@ services:
       - ./sql:/sql/
       - ./postgres/postgres.conf:/usr/local/etc/postgres/postgres.conf
     environment:
+      - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=Ageeva21
-    env_file:
-      - ./.env
+      - POSTGRES_PASSWORD=postgres
+#    env_file:
+#      - ./.env
     ports:
       - 5432:5432
 #  redis:
