Prepairing for WebHook

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ DJANGO_DEBUG=True
 #DATABASE_URL=postgres://postgres:Ageeva21@localhost:5432/InvestBot_DB
 TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
 
+#TELEGRAM_TOKEN=1735466306:AAHVFNp98u2OplxoWOobhzcUKuBA8F5RwhA
 
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
