--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.8"
 
 services:
-  db:
+  postgres:
     image: postgres:latest
-    container_name: postgres_db
+    container_name: postgres
     restart: always
     volumes:
       - ./postgres/postgres_data:/var/lib/postgresql
@@ -30,13 +30,14 @@ services:
       - 8000:8000
     environment:
       - DJANGO_DEBUG='True'
-      - DATABASE_URL=postgres://postgres:postgres@docker.for.mac.host.internal/${POSTGRES_DB}
+#      - DATABASE_URL=postgres://postgres:postgres@docker.for.mac.host.internal/${POSTGRES_DB}
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/${POSTGRES_DB}
       - POSTGRES_USER
       - POSTGRES_PASSWORD
 #    env_file:
 #      - ./.env
     depends_on:
-      - db
+      - postgres
 #      - redis
   bot:
     build: .
@@ -44,8 +45,9 @@ services:
     command: python run_pooling.py
     restart: always
     environment:
-      - TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
-      - DATABASE_URL=postgres://postgres:postgres@docker.for.mac.host.internal/${POSTGRES_DB}
+      - TELEGRAM_TOKEN
+#      - DATABASE_URL=postgres://postgres:postgres@docker.for.mac.host.internal/${POSTGRES_DB}
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/${POSTGRES_DB}
     depends_on:
       - web
     volumes:
