DATABASE_URL in .env

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ POSTGRES_PASSWORD=postgres
 
 
 TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
-DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+DATABASE_URL=postgres://postgres:postgres@postgres:5432/${POSTGRES_DB}
 
 
 
