Commented container bot

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 DJANGO_DEBUG=True
-POSTGRES_DB=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_DB=postgres2
+POSTGRES_USER=postgres2
+POSTGRES_PASSWORD=postgres2
 
 
 TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
-DATABASE_URL=postgres://postgres:postgres@postgres:5432/${POSTGRES_DB}
+DATABASE_URL=postgres://postgres2:postgres2@postgres2:5432/postgres2
 
 
 
