--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: "3.8"
 
 services:
-  postgres:
+  postgres2:
     image: postgres:latest
-    container_name: postgres
+    container_name: postgres2
     restart: always
     volumes:
       - ./postgres/postgres_data:/var/lib/postgresql
       - ./db.sql:/docker-entrypoint-initdb.d/db.sql
       - ./postgres/postgres.conf:/usr/local/etc/postgres/postgres.conf
-    environment:
-      - POSTGRES_DB
-      - POSTGRES_USER
-      - POSTGRES_PASSWORD
-#    env_file:
-#      - ./.env
+#    environment:
+#      - POSTGRES_DB
+#      - POSTGRES_USER
+#      - POSTGRES_PASSWORD
+    env_file:
+      - ./.env
     ports:
       - 5432:5432
 #  redis:
@@ -28,13 +28,13 @@ services:
       - .:/code
     ports:
       - 8000:8000
-    environment:
-      - DJANGO_DEBUG
-      - DATABASE_URL
-      - POSTGRES_USER
-      - POSTGRES_PASSWORD
-#    env_file:
-#      - ./.env
+#    environment:
+#      - DJANGO_DEBUG
+#      - DATABASE_URL
+#      - POSTGRES_USER
+#      - POSTGRES_PASSWORD
+    env_file:
+      - ./.env
     depends_on:
       - postgres
 #      - redis
