--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     env_file:
       - ./.env
     depends_on:
-      - postgres
+      - postgres2
 #      - redis
 #  bot:
 #    build: .
