--- a/.env
+++ b/.env
@@ -5,8 +5,7 @@ POSTGRES_PASSWORD=postgres
 
 
 TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
-DATABASE_URL=sqlite:///db.sqlite3
-#DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
+DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
 
 
 
