--- a/.env
+++ b/.env
@@ -4,12 +4,17 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
 
-TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
-DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
+#TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
+#DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
 
 
 
 #for local test TestBot
-#TELEGRAM_TOKEN=1735466306:AAHVFNp98u2OplxoWOobhzcUKuBA8F5RwhA
+TELEGRAM_TOKEN=1735466306:AAHVFNp98u2OplxoWOobhzcUKuBA8F5RwhA
+DATABASE_URL=postgres://postgres:Ageeva21@localhost:5432/InvestBot_DB
+
+
+GOOGLE_FORM_LINK = https://docs.google.com/forms/d/e/1FAIpQLSdH694Dh_35u_IiNnZ6XUu9sez4AICDbx6nqohv0VbbS5r5Ig/viewform
+
+
 #DATABASE_URL=sqlite:///db.sqlite3
-#DATABASE_URL=postgres://postgres:Ageeva21@localhost:5432/InvestBot_DB
