Tasks, Language, Symbols 2-16, Cache for add Stocks

--- a/.env
+++ b/.env
@@ -4,17 +4,17 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
 
-#TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
-#DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
+TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
+DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
 
 
 
 #for local test TestBot
-TELEGRAM_TOKEN=1735466306:AAHVFNp98u2OplxoWOobhzcUKuBA8F5RwhA
+#TELEGRAM_TOKEN=1735466306:AAHVFNp98u2OplxoWOobhzcUKuBA8F5RwhA
 #DATABASE_URL=postgres://postgres:Ageeva21@localhost:5432/InvestBot_DB
 
 #for docker test TestBot
-DATABASE_URL=postgres://postgres:postgres@docker.for.mac.host.internal/${POSTGRES_DB}
+#DATABASE_URL=postgres://postgres:postgres@docker.for.mac.host.internal/${POSTGRES_DB}
 REDIS_HOST=redis
 
 GOOGLE_FORM_LINK = https://forms.gle/UEmxZRvvLv6Reg2f6
