Tasks, Language, Symbols 2-16, Cache for add Stocks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
       - .:/code
 
 volumes:
-  postgres_data:
+  postgres:
     external:
       name: invest_tgbot_postgres_data
   redis-data:
