Tasks, Language, Symbols 2-16, Cache for add Stocks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./db.sql:/docker-entrypoint-initdb.d/db.sql
+#      - ./db.sql:/docker-entrypoint-initdb.d/db.sql
     env_file:
       - ./.env
     ports:
