.env whitespaces remove

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
 #DATABASE_URL=postgres://postgres:postgres@docker.for.mac.host.internal/${POSTGRES_DB}
 REDIS_HOST=redis
 
-GOOGLE_FORM_LINK = https://forms.gle/UEmxZRvvLv6Reg2f6
-GOOGLE_FORM_LINK_ENG =https://forms.gle/6b51mF6V4ayNPcE18
+GOOGLE_FORM_LINK=https://forms.gle/UEmxZRvvLv6Reg2f6
+GOOGLE_FORM_LINK_ENG=https://forms.gle/6b51mF6V4ayNPcE18
 
 #DATABASE_URL=sqlite:///db.sqlite3
