--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 DJANGO_DEBUG=True
 POSTGRES_DB=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_USER=Waldick28
+POSTGRES_PASSWORD=Adfkn[oknwei80134~\kf[af
 
 
 TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
-DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
 
 
 
