--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 DJANGO_DEBUG=True
 POSTGRES_DB=postgres
-POSTGRES_USER=Waldick28
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Axta9v6yxC
 
 
 TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
-DATABASE_URL=postgres://Waldick28:Axta9v6yxC@postgres:5432/${POSTGRES_DB}
+DATABASE_URL=postgres://postgres:Axta9v6yxC@postgres:5432/${POSTGRES_DB}
 
 
 
