change postgres data

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ POSTGRES_PASSWORD=Axta9v6yxC
 
 
 TELEGRAM_TOKEN=1779291462:AAEI1yOW-50qmi6LPkAGTSfJjP_AW9PWZGo
-DATABASE_URL=postgres://postgres:Axta9v6yxC@postgres:5432/${POSTGRES_DB}
+DATABASE_URL=postgres://postgres:Axta9v6yxC@postgres:5432/postgres
 
 
 
